// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders a custom asterisk 1`] = `
<body>
  <div>
    <label
      class=""
      data-testid="label-id"
    >
      I'm a label
      <span
        class=""
      >
        foo
      </span>
    </label>
  </div>
</body>
`;

exports[`Label renders a default state 1`] = `
<div>
  <label
    class=""
  >
    Default Label
  </label>
</div>
`;
